lounge bug fix
